--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,7 +2,7 @@
 header {
   display: grid;
   grid-template-columns: 15% 1px 55% 20%;
-  margin: 30px 0;
+  margin: 30px 10%;
   margin-bottom: 84px;
 }
 header span {
@@ -35,7 +35,6 @@ header li {
   display: flex;
   align-items: center;
   gap: 21px;
-  margin-top: 7px;
   font-family: "Montserrat";
   font-size: 14px;
   font-style: normal;
@@ -61,3 +60,98 @@ header li {
 }
 
 /* main section 1 */
+
+.section1 {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+}
+.column1 {
+  margin-left: 20%;
+}
+.infotext1 span {
+  color: var(--primaty-cyan-dark, #2b788b);
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 16px */
+  letter-spacing: 2.24px;
+  text-transform: uppercase;
+}
+h1 {
+  color: var(--primaty-black, #000);
+  font-family: "Dela Gothic One";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 67.2px */
+  letter-spacing: -2.24px;
+}
+.p1 {
+  color: var(--primaty-grey-dark, #757575);
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 25.2px */
+  letter-spacing: -0.72px;
+  width: 390px;
+}
+.button1 .signin {
+  color: #000;
+  background-color: transparent;
+  border: none;
+  margin-top: 30px;
+}
+.button1 .more {
+  color: #2b788b;
+  font-family: "Montserrat";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 14px */
+  letter-spacing: -0.56px;
+  border-radius: 12px;
+  background: #c3dce3;
+  border-style: none;
+  text-decoration: none;
+  padding: 4px 18px;
+}
+.vectorimages {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  margin-top: 40px;
+}
+.vector {
+  width: 19.944px;
+  height: 24.889px;
+}
+.numbers {
+  color: #000;
+  font-family: "Dela Gothic One";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 32px */
+  letter-spacing: -1.28px;
+}
+.plus {
+  color: #2b788b;
+  font-family: "Dela Gothic One";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: -1.28px;
+  grid-row: 1 / 2;
+}
+.text {
+  color: #585858;
+  font-family: "Montserrat";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 19.6px */
+  letter-spacing: -0.56px;
+  grid-row: 2 / 3;
+}
