--- a/assets/styles/normalize.css
+++ b/assets/styles/normalize.css
@@ -11,6 +11,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  /* color: var(--primaty-grey-dark, #757575); */
 }
 
 /* Sections
@@ -40,6 +41,7 @@ main {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+  font-family: 'Dela Gothic One';
 }
 
 /* Grouping content
